test_case/rust-lang_rust/44619_332964987.rs
Rust
is_handler(|_| "hi"); //~ ERROR
is_handler(mk_handler(|_| "hi")); // ok
